# dal/model/admin_user.go
@@ -14,6 +14,7 @@ type AdminUser struct {
 	IsRoot   bool                   `json:"is_root"` // 是否是超级管理员
 	Status   consts.AdminUserStatus `json:"status"`
 	Roles    []*AdminRole           `json:"roles" gorm:"many2many:admin_user_roles;"`
+	News     []*News                `json:"news" gorm:"foreignKey:AuthorID"`
 }
 
 func (AdminUser) TableName() string {
